--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Extractors</title>
+  <title>Extractors</title>
   <style>
     :root {
       --primary: #2563eb;
@@ -136,7 +136,7 @@
   </style>
 </head>
 <body>
-  <h1>Data Extractors</h1>
+  <h1> Extractors</h1>
 
   <div class="tool-grid">
     <div class="tool-card">
